src/objects/click_Bank_Statements_Sub_Category__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Statement_Account_Number__c</fullName>
        <label>Bank Statement Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Statement_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statement Category</label>
        <referenceTo>click_Bank_Statement_Data__c</referenceTo>
        <relationshipLabel>Bank Statement Sub Categories</relationshipLabel>
        <relationshipName>Bank_Statement_Sub_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_Bank_Statements_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Statements Account</label>
        <referenceTo>click_Bank_Statements_Account__c</referenceTo>
        <relationshipLabel>Bank Statement Sub Categories</relationshipLabel>
        <relationshipName>Bank_Statement_Sub_Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Click_Required_Document_Id__c</fullName>
        <label>Required Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Statement_No__c</fullName>
        <label>Category Index No.</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Subcategory_Index__c</fullName>
        <label>Subcategory Index</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_TransactionCount__c</fullName>
        <label>TransactionCount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Click_Unique_Id__c</fullName>
        <formula>Click_Required_Document_Id__c &amp; &apos;-:-&apos;&amp;  Bank_Statement_Account_Number__c &amp; &apos;-:-&apos;&amp;  Click_Statement_No__c &amp; &apos;-:-&apos;&amp;  Click_Subcategory_Index__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependent__c</fullName>
        <label>Subcategory Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_amount__c</fullName>
        <label>Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_balance__c</fullName>
        <label>Balance</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_dateObj__c</fullName>
        <label>DateObj</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_date__c</fullName>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_firstTransaction__c</fullName>
        <label>First Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_lastTransaction__c</fullName>
        <label>Last Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_maxValue__c</fullName>
        <label>Max Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_minValue__c</fullName>
        <label>Min Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_monthAvg__c</fullName>
        <label>Month Avg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_periodIsRegular__c</fullName>
        <label>Period Is Regular</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_period__c</fullName>
        <label>Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_tags__c</fullName>
        <label>Tags</label>
        <picklist>
            <picklistValues>
                <fullName>Dishonours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term Lender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Debits</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>click_text__c</fullName>
        <label>Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_totalValue__c</fullName>
        <label>Total Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>click_type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank Statements Sub Category</label>
    <nameField>
        <label>Bank Statements Sub Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Statement Sub Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>